--- a/css/equipe.css
+++ b/css/equipe.css
@@ -2,14 +2,33 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  font-style: italic;
+  padding-top: 120px
 }
 
-#equipe h2 {
+#equipe h3 {
   margin-bottom: 20px;
+}
+
+#dados-user {
+  display: flex;
+  flex-direction: column;
+  padding: 0 10px;
 }
 
 #photo-user {
   width: 250px;
   border-radius: 30px;
-  margin-bottom: 20px;
+}
+
+#redes-sociais {
+  display: flex;
+  gap: 8px;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#redes-sociais img {
+  width: 25px;
 }
