--- a/css/menu.css
+++ b/css/menu.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  background-color: rgba(189, 189, 189, 0.562);
+  background-color: rgb(189, 189, 189);
 }
 
 #menu-nav {
