--- a/css/tecnologias.css
+++ b/css/tecnologias.css
@@ -5,15 +5,16 @@
   height: 400px;
   width: 100%;
   color: white;
-  background-color: #2c3136;
-  margin: 120px 0 90px 0;
+  padding-top: 120px
 }
+
 #tecnologias div {
   display: flex;
-  height: 100%;
+  height: 400px;
   flex-direction: column;
   text-align: center;
   justify-content: space-evenly;
+  background-color: #2c3136;
 }
 #tecnologias hr {
   width: 8px;
