--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 @import url(css/modulos.css);
 @import url(css/tecnologias.css);
 @import url(css/equipe.css);
+@import url(css/footer.css);
 
 * {
   font-family: "Poppins", sans-serif;
@@ -19,7 +20,8 @@ body {
   align-items: center;
   flex-direction: column;
   width: 100%;
-  padding: 30px 20px;
+  padding: 30px 20px 0px 20px;
+  position: relative;
 }
 
 ul {
