--- a/css/tecnologias.css
+++ b/css/tecnologias.css
@@ -5,10 +5,10 @@
   height: 400px;
   width: 100%;
   color: white;
-  padding-top: 120px
+  padding-top: 120px;
 }
 
-#tecnologias div {
+#div-back-end, #div-front-end {
   display: flex;
   height: 400px;
   flex-direction: column;
@@ -16,12 +16,7 @@
   justify-content: space-evenly;
   background-color: #2c3136;
 }
-#tecnologias hr {
-  width: 8px;
-  height: 100%;
-  border: none;
-  background-color: white;
-}
+
 #tecnologias ul {
   display: flex;
   gap: 40px;
@@ -45,4 +40,31 @@
   font-weight: 600;
   margin-bottom: 10px;
   font-style: italic;
+}
+
+.vertical-line-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.vertical-line {
+  height: 200px;
+  width: 2px;
+  background-color: #fff;
+}
+
+.icon-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #2c3136;
+  padding: 5px;
+  border-radius: 50%;
+}
+
+.icon-container i {
+  font-size: 20px;
+  color: #fff;
 }
