--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 100%;
-  padding: 30px 20px 0px 20px;
+  
+  /* padding: 30px 20px 0px 20px; */
   position: relative;
 }
 
