--- a/css/equipe.css
+++ b/css/equipe.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   font-style: italic;
-  padding-top: 120px
+  padding: 120px 0 120px 0;
 }
 
 #equipe h3 {
