--- a/css/footer.css
+++ b/css/footer.css
@@ -8,23 +8,37 @@ footer {
   color: white;
 }
 
+#footer-main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  width: 90%;
+  max-width: 1800px;
+  
+}
+
 #rodape {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 250px;
-  color: white;
+  color: black;
 }
 
 #cadastro {
   width: 200px;
+  height: 200px;
   padding: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: 12px;
+  background-color: white;
+  border-radius: 15px;
+  margin: 30px 30px 30px 0px;
 }
 
 #cadastro p {
@@ -40,12 +54,25 @@ footer {
 }
 
 #contato {
-  margin-right: 80px;
+  width: 200px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: white;
+  border-radius: 15px;
+  padding: 30px;
+  gap: 9px;
+  margin: 30px 0 30px 30px;
 }
 
-#contato div {
+#contato li {
   display: flex;
-  margin-top: 10px;
+}
+#contato hr {
+  padding: 0;
+  margin: 0;
+  
 }
 #contato img {
   width: 20px;
@@ -59,9 +86,27 @@ footer {
   justify-content: center;
   font-size: 12px;
   margin-bottom: 20px;
-  color: red;
+  color: white;
+  background-color: rgb(255, 0, 0);
+  padding: 10px 0 10px 0;
+  border-radius: 15px;
+  width: 100%;
+  max-width: 1800px;
 }
 
 #aviso p {
   font-size: 14px;
+}
+#aviso p strong {
+  font-size: 18px;
+}
+
+#form-lorem {
+  color: white;
+  width: 100%;
+  max-width: 600px;
+  padding: 30px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
 }
